IDEA-382919 Javadoc: cleanup
This commit is separated to reduce the noise during review.

GitOrigin-RevId: cccbf4be2e05da23ec571df9abb15170037396c1